--- a/octoprint_enclosure/templates/enclosure_navbar_input.jinja2
+++ b/octoprint_enclosure/templates/enclosure_navbar_input.jinja2
@@ -29,6 +29,13 @@
             <span class="add-on">%</span>
         </a>
     </li>
+
+    <li>
+        <a href="javascript:void(0)">
+            <span data-bind="text: temp_sensor_fan, attr: {title: temp_sensor_fan}"> </span>
+            <span class="add-on">%</span>
+        </a>
+    </li>
     <!-- /ko -->
     <!-- /ko -->
 </ul>
