--- a/octoprint_enclosure/templates/enclosure_settings.jinja2
+++ b/octoprint_enclosure/templates/enclosure_settings.jinja2
@@ -603,8 +603,9 @@
         <div class="controls">
           <select data-bind="value: temp_sensor_type">
             <option value="">Select Sensor</option>
+            <option value="arduino_hub">Arduino Hub</option>
             <option value="11">DHT11</option>
-	    <option value="20">DHT20</option>
+	          <option value="20">DHT20</option>
             <option value="22">DHT22</option>
             <option value="2302">AM2302</option>
             <option value="18b20">DS18B20</option>
